--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,7 @@
   "version": "3.0",
   "homepage_url": "https://github.com/bafox2/twitch-vod-time-remover",
   "icons": {
-    "32": "icons/ez-32.webp",
-    "48": "icons/ez-48.ico"
+    "32": "icons/ez-32.png"
   },
   "permissions": ["activeTab", "storage", "scripting", "https://twitch.tv/*"],
   "background": {
@@ -21,7 +20,7 @@
     }
   ],
   "browser_action": {
-    "default_icon": "icons/ez-noglasses-32v2.webp",
+    "default_icon": "icons/hard-32.png",
     "default_title": "Twitch Spoiler Avoider",
     "default_popup": "popup/menu.html"
   }
